--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   flutter_bloc: ^7.3.3
   equatable: ^2.0.3
   bot_toast: ^4.0.1
+  http: ^0.13.4
+  flutter_rating_bar: ^4.0.1
+  transparent_image: ^2.0.0
+  favorite_button: ^0.0.3
 
 dev_dependencies:
   flutter_test:
