--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   transparent_image: ^2.0.0
   favorite_button: ^0.0.3
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
